--- a/RegexComposer/Form1.resx
+++ b/RegexComposer/Form1.resx
@@ -126,4 +126,162 @@
   <metadata name="MatchesBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>26, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAQAAAAAAAEAIABWBAAARgAAABAQAAABACAAaAQAAJwEAAAAAAAAAQAgACQKAAAECQAAICAAAAEA
+        IACoEAAAKBMAAIlQTkcNChoKAAAADUlIRFIAAACAAAAAgAgAAAAA5lU+FwAAAARnQU1BAACxjwv8YQUA
+        AAABc1JHQgCuzhzpAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1MAAA6mAAADqYAAAXcJy6UTwAAAAC
+        YktHRAD/h4/MvwAAAAlwSFlzAAAOwwAADsMBx2+oZAAAAylJREFUeNrtmS1vG0EQhocdNLKMjAyCSgoC
+        alDFIH+gLJIVEGZiFNAWWSqz2srIUg4UNCAowKRSgCWTSA0rqFRLMUkNqkoBjhQdOHDduY/cnm+/fOPW
+        BfOCyM6ud57d252dmYNoxwIGYAAGYAAGYAAGYAAGYAAGYAAGYAAGYAAGYAAGYADlfydH4V+wdXUUOAIM
+        ATqBbTiNJgBTbUvrtxPAAITeVwTwAS6UDT9rYtTmnQPAKdr/VNF+NAbw1S13TSRYX4MygI/21ZNwUR9g
+        rGm6jwnuLQBTtK+ZgyNAX9cWE3SK+3sdYO7R7EcHBoBk9KEJIGyLHt0Kdr+//pqcGzFAO/7wMDtelrrF
+        6zszAIwVT8lJ4uTCoS/2eAMBwh8fW+qVjA2stAALbx3QVc8gVu1Y/PFeecm3g3K/eInlh1AE6ILpCZoU
+        jGqwptq5ypl9w6aFBuAG8ZdRNQXnBYT6pcab94uTLACclPboRgov65n51hftZbLE9nyWoG+qgnCW2P9s
+        6oTTHCgBRqLlhGI/CtO92DZ1uhYdGk8LJAPsgfYmcxQeMs+zuXK0c60AWOCvVxFB8SmeorPxTL5kID8D
+        CeCiohPM1U2cD16nPUO3mWjfVwDg78YRQVep4bBjdmcr3Ca/ygD7Vb1gNm4zc+N46zUNQR1auikDINct
+        AUA8Wm+efJybF7MnbdMc4BYBCPYfX0hnSEQ1Lx+1XYeSw8tNopNuEACi0M/dS3Rqiil8yRvnAFObA9me
+        JtIx2QmAbIoB/qM9QD4F7lKfAqof2EBqP0D2hO5Se0LyXeAu2dI2b0NX6W5Dh3ggeFOH+ruqpYNMunjA
+        HhHFySXAc1LYpI+I7DHh2zToHkQk6WJCe1ScZlywR7Kvj4qtecFT2kMCwLxglI+53mTKjLIVIDlMQ2Zk
+        zQ3729gDptzQlh2np6BVpYCQyZgdW+sDdD9gqQ9Ur5C4ylIhSQB7Gw25kaw1InqVzCh7lYxeJzTJpU5I
+        rpTa7FsrpdRasV6uteKU4MO27btXy2nvC/Ryf1+w+zcm/1IMwAAMwAAMwAAMwAAMwAAMwAAMwAAMwAAM
+        sHOAP2+yOKM2jXOoAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE0LTAyLTA1VDE3OjM5OjAwKzA4OjAwaAqV
+        IgAAACV0RVh0ZGF0ZTptb2RpZnkAMjAxNC0wMi0wNVQxNzozOTowMCswODowMBlXLZ4AAAAadEVYdFNv
+        ZnR3YXJlAFBhaW50Lk5FVCB2My41LjEwMPRyoQAAAABJRU5ErkJggigAAAAQAAAAIAAAAAEAIAAAAAAA
+        AAQAAMIOAADCDgAAAAAAAAAAAAD/////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////////////v7+/9UVFT/4+Pj////////////
+        /////////////////////6ampv+oqKj///////////////////////////91dXX/zs7O////////////
+        ////////////////////////////////b29v/8rKyv/////////////////V1dX/e3t7//////+oqKj/
+        Dw8P/+jo6P////////////////////////////Hx8f9PT0//////////////////i4uL/8rKyv//////
+        qKio/w8PD//x8fH/////////////////////////////////ampq/9/f3////////////29vb//c3Nz/
+        /////////////////////////////////////////////////////5ubm/++vr7///////////9vb2//
+        3Nzc/////////////////9zc3P+bm5v/7e3t/3Jycv////////////////+bm5v/vr6+////////////
+        i4uL/8rKyv//////////////////////Y2Nj/zIyMv/Kysr/////////////////ampq/9/f3///////
+        /////9XV1f97e3v/////////////////6urq/1ZWVv8AAAD/m5ub//v7+///////8fHx/09PT///////
+        ////////////////dXV1/87Ozv///////////7Kysv/Y2Nj/ZWVl/7i4uP/R0dH//////29vb//Kysr/
+        //////////////////////v7+/9UVFT/4uLi/////////////////4GBgf///////////6ampv+oqKj/
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgAAAAAeRn3
+        ugAAAARnQU1BAACxjwv8YQUAAAABc1JHQgCuzhzpAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1MAAA
+        6mAAADqYAAAXcJy6UTwAAAACYktHRAD/h4/MvwAAAAlwSFlzAAAOwwAADsMBx2+oZAAACPdJREFUeNrt
+        nT9oHEcUxqfb8iqhIlylwgSjIi5SWEWwChtDQIXBkEIk4M5gjhQiyK5M3LkIqlxc4cYCVQ6oMEaFsBuD
+        bGJiiMAisglCJMbhMBKEK664nHT33u7tzszOzO3Nd2e9rzKSdvab386++fdmrbpnXAptAC0BgDaAlgBA
+        G0BLAKANoCUA0AbQEgBoA2gJALQBtAQA2gBaAgBtAC0BgDaAlgBAG0BLAKANoCUA0AbQEgBoA2gJALQB
+        tAQA2gBaAgBtAC0BgDaAlgBAG0BLAKANoCUA0AbQEgBoA2gJALQBtAQA2gBaAgBtAC0BgDaAlgBAG0BL
+        AKANoCUA0AbQEgBoA2gJALQBtAQA2gBaAgBtAC0BgDaAlgBAG0BLAKANoCUA0AbQEgBoA2j5ANi9+BFt
+        11l73zh69QCwmaj6HrpijnqdqNrrigE0VU+13eh1+e7Lnn72u+ZFcmJ2s1IAK+pUiRvXCrVwctuG1yWb
+        fa+qWR2Azo1BmSr5LTKAcyd3veRzxa/kVd2tCkDnuk+Z1er0rgs+V2TcrlQDIH3+Tq1qDADO+V1z152A
+        E4AGl+cUVyrVfv/GnlfdZ8f3KwCQ1n8rev0DAXQfurZZh5KbXNZ2/Pp3X/Zvve97navrcgDb0PrT7b0B
+        pAQS6+itFMBeQgVtIOrf3erf/KX/lRwH6q0RAHTquPh/qmZ46+PYtdgJB8CFNDD1JwAh3U9n0eHhlQDY
+        dIE4Vq2M0P5a3HzNb5AdwGHi8hpVqTfrn4Z/0NACOFg/dCmNA1j9KAzAUvQO4I5SX6z+nmluy4U38Pj5
+        9zXXJsHDAeOI0AqAX4Cy4VRl6sz2b3h5/d/BTxaGAHTe/jKnfGYHN8teAhuA1sCNWogWANJBh5pZ3Wmn
+        AJZ6//y0fi1Jf++2MsF1mDfUwQaApxRvYtU/M+ruN4TmweBfX++szgz/bs2txK2SnsAC4B1dGnEGfFk5
+        6yfHIpdpQKiP46r8ytmjbjy9v+VU++Se8/os92T652gG8JJuFnkKfHyvVlb9mUdtjwJ5SKztOc0AqAuc
+        jz4Eaj+esVX//DM/R0cUB+94AXhD93sSu/4nenbRVP1v//AujOeFuiZgBECrYPOI+vf05w+6V//W3wFF
+        HVEU0HUcJgCHoAiQ0cd7yXD1a2vHYSWtUTjXvDsq4Jpoal/L1v/HYCv8NDWvswnAOUuriaa94fYfPiGj
+        9/mqMwDuA+NvhWW0OARA3QwuiEfYxTBoAHDXjCyeNvIx8HloSTTHUo9cAZgviCeex7DChyR3jA9UD4AH
+        Ae+AAFbIRJOnSA9Cy+J34IMbABo6eO5IVSoOQ410cS8JfSAd6lELvboeAA2Do++EZizPZ9o9L+4thxZH
+        M7vCypAWQIfgQ7ZC+qLFrP62Bjfh0M05Y5vWAuAQ8KG85DGJJ7HbwxWoB87NjVXSAtgw4YonarK8jkOB
+        MPCt5Ead70q1ACj+ho88RhU1+XQ7gmNCYJ7WQp6oDcAlwx9HE23IZbcjaI1/MaxIakENFwC59y++7mcD
+        IIlaRdgmLQWR/HK6DsAHNVprG1m0HJvrtAd1mA2aFBG+xAEAR8yYq6FZLelbK02OyjOfNOKZZa4b0AEw
+        wYqlv+ZyAZA0GA9d/C+gUG7WuVQLHYANw+sSTZ3bSr8fexoIm2FTIsPgTgeA4oVXdmK1elXTz3231Nz7
+        wCJn3QHQQnoDB6DbNox5HwfPiA0DAR2AxgQAqF5nHsClsw6g4Q8ANhKeFADBC1ATqQAADbTnSnXzrAM4
+        872AB4AH8PWQcQLIzaZtQ2HYXGAsMixy6ABQeuDXaM+ViiZDuTmGbTr8WR2r3feYDvPf4lbFq5dplUcH
+        4Ij+Nl6C5PhFCZOzuZ9rmzlNnQFnpMYm6tryixxaALQ1GC1HOoJoIJhfUNQCoPSI4K3ICRTl/OQX1bUA
+        Ng3vi7faO83V1acH6Mp3M2ui+bR5LQBeQh4tP6JNeW7nX6Hr331u6AQM+QEUBUdKEjyYUyxgokFftM5Z
+        WOjVA6C92cYIt3xXVxmNUlIVoplAIa7rAdDOwChBIJfjhu1SjSHAAIDPSoQPhZ4M11/VkSmnHNaTggvD
+        eN/YYpy1lAOATLdJ3+lix24AQKnCwTkiR/n6Q+MguylGdQOAXbriReAt9woAloAAHtEbUNzvNk15rw4u
+        uRF4y+0CAOTyiqU2JgCcp+t0RHXCAdjaswmA9ZSFg/YLAIATC9vpF+OqDw2dAg/NdQoAcFNLPi+hS/1W
+        pVcFbpAt5wEEfAOiIlGquPb0iyq/LKwJ5IMA6vBVZlSnfZRmAIcjtt3lSWkA9hOwlpVfWhYJzFFvXcjW
+        /yGs/px2r88vtABoUUcQGL9b6Se9Etzhu6G0ez8A6Vgg1P6zr04vr90GfomSFkNNcxEbgA5NicIPrB2/
+        fbrzD672mSG5qRlbd394M2EJWYdRxC9AYhrR2re/+BsS05otw8etHpr+wg4g/Y5U8JE9qNLPIBn/pGQD
+        lF+haB8SqlL8GaHEPKUr2wHms/ewT0mFK/2QlGU1qnQLnD/Ec2XaCLR4WdaWX18KIMXYQNfIT+mn1KyN
+        tzwJIv2gYNBBBVj9r7uFL4cskHReB9/f8ah/+iFk+8EflzSYKSSQPv+yT2E75QGln2htTEckbF9hx2Xb
+        EW6JUOknWq9PA4HMTLx0O8YxEyxtAxcmf0R0kG7Llu9IuqbC8dS4Pvn/ycIufYsrcdiOc84F3EqmpQH0
+        eu66U/zzA9B9fcJ1cRrq3+1+PMnNqDul5nhkgx7MTc9wuBcGr7g9K5902PbatNS/59X1eOVnlQ8cIgGA
+        NoCWAEAbQEsAoA2gJQDQBtASAGgDaAkAtAG0BADaAFoCAG0ALQGANoCWAEAbQEsAoA2gJQDQBtASAGgD
+        aAkAtAG0BADaAFoCAG0ALQGANoCWAEAbQEsAoA2gJQDQBtASAGgDaAkAtAG0BADaAFoCAG0ALQGANoCW
+        AEAbQEsAoA2gJQDQBtASAGgDaAkAtAG0BADaAFoCAG0ALQGANoCWAEAbQEsAoA2gJQDQBtASAGgDaAkA
+        tAG0zjyA/wFo8LdmnomztQAAACV0RVh0ZGF0ZTpjcmVhdGUAMjAxNC0wMi0wNVQxNzozOTowMCswODow
+        MGgKlSIAAAAldEVYdGRhdGU6bW9kaWZ5ADIwMTQtMDItMDVUMTc6Mzk6MDArMDg6MDAZVy2eAAAAGnRF
+        WHRTb2Z0d2FyZQBQYWludC5ORVQgdjMuNS4xMDD0cqEAAAAASUVORK5CYIIoAAAAIAAAAEAAAAABACAA
+        AAAAAAAQAADCDgAAwg4AAAAAAAAAAAAA////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        7e3t/0ZGRv/19fX/////////////////////////////////////////////////////////////////
+        ////////////////////////////////2tra/2NjY//7+/v/////////////////////////////////
+        //////v7+/9CQkL/vr6+////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////m5ub/3V1df//////////////////////
+        ////////////////qKio/4uLi/////////////////////////////Hx8f8dHR3/VlZW////////////
+        ////////////////////////////////////////////////////////////////XV1d/8rKyv//////
+        //////////////////////////8nJyf/8fHx////////////////////////////8fHx/yMjI/9WVlb/
+        ///////////////////////////////////////////////////////////////////////////Gxsb/
+        Y2Nj////////////////////////////39/f/0FBQf//////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////v7+/8HBwf///////////////////////////++vr7/b29v////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////zs7O//x8fH//////////////////////76+vv9vb2//////////////////
+        //////////////////////////////////////////////////////////9TU1P/7e3t/9nZ2f+Dg4P/
+        ////////////////////////////////Ozs7//Hx8f//////////////////////39/f/0FBQf//////
+        /////////////////////////////////////////////////////////////////////8rKyv9RUVH/
+        IyMj/+3t7f////////////////////////////v7+/8HBwf/////////////////////////////////
+        Jycn//Hx8f/////////////////////////////////////////////////////////////////39/f/
+        m5ub/wcHB/8PDw//t7e3//v7+///////////////////////xsbG/2NjY///////////////////////
+        //////////+oqKj/i4uL////////////////////////////////////////////////////////////
+        /////729vf+vr6//jIyM/6ampv+bm5v/0dHR//////////////////////9dXV3/ysrK////////////
+        //////////////////////v7+/9CQkL/vr6+////////////////////////////////////////////
+        //////////////////////////+enp7/ysrK////////////////////////////m5ub/3V1df//////
+        /////////////////////////////////////+3t7f9GRkb/9fX1////////////////////////////
+        /////////////////////////////////////////////////////////////////////9ra2v9jY2P/
+        +/v7////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////wAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+</value>
+  </data>
 </root>
